--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -21,19 +21,23 @@
     <Features>IOperation</Features>
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-  <Import Condition="Exists('$(MSBuildThisFileDirectory)\Directory.Version.props')" Project="$(MSBuildThisFileDirectory)\Directory.Version.props" />
   <PropertyGroup Label="Version" Condition="'$(VersionPrefix)'!=''">
-    <!--<VersionPrefix>0.0.1</VersionPrefix>-->
     <FileVersion>$(VersionPrefix)</FileVersion>
-    <AssemblyVersion Condition="'$(BuildId)'==''">$(FileVersion)</AssemblyVersion>
-    <AssemblyVersion Condition="'$(BuildId)'!=''">$(FileVersion).$(BuildId)</AssemblyVersion>
+    <AssemblyVersion>$(FileVersion)</AssemblyVersion>
+  </PropertyGroup>
+  <PropertyGroup Label="CI Build" Condition="'$(BuildId)'!='' and !('$(Configuration)'=='Release' and ($(BuildSourceBranch.StartsWith('refs/heads/rel/')) or $(BuildSourceBranch.StartsWith('rel/'))))">
+    <VersionSuffix Condition="'$(VersionSuffix)'!=''">$(VersionSuffix)-build$(BuildId)</VersionSuffix>
+    <VersionSuffix Condition="'$(VersionSuffix)'==''">build$(BuildId)</VersionSuffix>
+  </PropertyGroup>
+  <PropertyGroup Label="CI Build" Condition="'$(BuildId)'!=''">
+    <AssemblyVersion Condition="'$(FileVersion)'!=''">$(FileVersion).$(BuildId)</AssemblyVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.3" PrivateAssets="All" />
     <PackageReference Include="Microsoft.DotNet.Analyzers.Compatibility" Version="0.2.12-alpha" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup Label="SourceLink">
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19270-01">
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19351-01">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
