--- a/src/THNETII.WinApi.Headers.FileApi/THNETII.WinApi.Headers.FileApi.csproj
+++ b/src/THNETII.WinApi.Headers.FileApi/THNETII.WinApi.Headers.FileApi.csproj
@@ -17,6 +17,9 @@
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
     <ProjectReference Include="..\..\src-shared\THNETII.WinApi.WindowsDataTypes\THNETII.WinApi.WindowsDataTypes.csproj" />
+    <ProjectReference Include="..\THNETII.WinApi.Constants.WinError\THNETII.WinApi.Constants.WinError.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
     <ProjectReference Include="..\THNETII.WinApi.Headers.MinWinBase\THNETII.WinApi.Headers.MinWinBase.csproj" />
   </ItemGroup>
 
