Stub DefineDosDevice functions

--- a/src/THNETII.WinApi.Headers.FileApi/THNETII.WinApi.Headers.FileApi.csproj
+++ b/src/THNETII.WinApi.Headers.FileApi/THNETII.WinApi.Headers.FileApi.csproj
@@ -21,6 +21,7 @@
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
     <ProjectReference Include="..\THNETII.WinApi.Headers.MinWinBase\THNETII.WinApi.Headers.MinWinBase.csproj" />
+    <ProjectReference Include="..\THNETII.WinApi.Headers.WinNT\THNETII.WinApi.Headers.WinNT.csproj" />
   </ItemGroup>
 
 </Project>
