--- a/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
+++ b/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
@@ -6,7 +6,7 @@
     <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
-    <RootNamespace>THNETII.WinApi.Native.Security</RootNamespace>
+    <RootNamespace>THNETII.WinApi.Native.Sspi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFrameworks)'=='netstandard1.3'">
