C:\Program Files (x86)\Windows Kits\10\Include\10.0.17134.0\um\credssp.h

--- a/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
+++ b/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
@@ -26,6 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Constants.Sspi\THNETII.WinApi.Constants.Sspi.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
     <ProjectReference Include="..\THNETII.WinApi.Constants.WinError\THNETII.WinApi.Constants.WinError.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
