--- a/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
+++ b/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Security.Principal.Windows" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src-shared\THNETII.WinApi.NativeLibraryNames\THNETII.WinApi.NativeLibraryNames.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
