SecPkgCred_SupportedAlgs structure, minschannel.h line 83

--- a/src/THNETII.WinApi.Headers.MinSchannel/THNETII.WinApi.Headers.MinSchannel.csproj
+++ b/src/THNETII.WinApi.Headers.MinSchannel/THNETII.WinApi.Headers.MinSchannel.csproj
@@ -10,4 +10,8 @@
     <RootNamespace>THNETII.WinApi.Native.MinSchannel</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Headers.WinCrypt\THNETII.WinApi.Headers.WinCrypt.csproj" />
+  </ItemGroup>
+
 </Project>
