Additional SECPKG_ATTR_* constants

--- a/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
+++ b/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
@@ -40,6 +40,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\THNETII.WinApi.Headers.AuthZ\THNETII.WinApi.Headers.AuthZ.csproj" />
+    <ProjectReference Include="..\THNETII.WinApi.Headers.CredSSP\THNETII.WinApi.Headers.CredSSP.csproj" />
+    <ProjectReference Include="..\THNETII.WinApi.Headers.MinSchannel\THNETII.WinApi.Headers.MinSchannel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
