--- a/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
+++ b/src/THNETII.WinApi.Headers.Sspi/THNETII.WinApi.Headers.Sspi.csproj
@@ -36,6 +36,9 @@
     <ProjectReference Include="..\THNETII.WinApi.Constants.WinError\THNETII.WinApi.Constants.WinError.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
+    <ProjectReference Include="..\THNETII.WinApi.Constants.WinNT\THNETII.WinApi.Constants.WinNT.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
