--- a/src-native-c/THNETII.WinApi.Sample.Native/THNETII.WinApi.Sample.Native.vcxproj
+++ b/src-native-c/THNETII.WinApi.Sample.Native/THNETII.WinApi.Sample.Native.vcxproj
@@ -66,7 +66,7 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <!-- <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies> -->
+       <AdditionalDependencies>Secur32.lib;%(AdditionalDependencies)</AdditionalDependencies> 
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
