--- a/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
+++ b/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.ErrHandlingApi\THNETII.WinApi.Headers.ErrHandlingApi.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.MinWinBase\THNETII.WinApi.Headers.MinWinBase.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.MinWinDef\THNETII.WinApi.Headers.MinWinDef.csproj" />
+    <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.Sspi\THNETII.WinApi.Headers.Sspi.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.SysInfoApi\THNETII.WinApi.Headers.SysInfoApi.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.UtilApiset\THNETII.WinApi.Headers.UtilApiset.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.WinBase\THNETII.WinApi.Headers.WinBase.csproj" />
