IOCTL_SMARTCARD_* constants, winsmcrd.h line 126

--- a/src/THNETII.WinApi.Headers.WinSmcrd/THNETII.WinApi.Headers.WinSmcrd.csproj
+++ b/src/THNETII.WinApi.Headers.WinSmcrd/THNETII.WinApi.Headers.WinSmcrd.csproj
@@ -8,4 +8,8 @@
     <RootNamespace>THNETII.WinApi.Native.WinSmcrd</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Headers.WinIOCtl\THNETII.WinApi.Headers.WinIOCtl.csproj" />
+  </ItemGroup>
+
 </Project>
