--- a/src/THNETII.WinApi.Headers.WinSmcrd/THNETII.WinApi.Headers.WinSmcrd.csproj
+++ b/src/THNETII.WinApi.Headers.WinSmcrd/THNETII.WinApi.Headers.WinSmcrd.csproj
@@ -2,13 +2,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
     <RootNamespace>THNETII.WinApi.Native.WinSmcrd</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src-shared\THNETII.WinApi.Helpers\THNETII.WinApi.Helpers.csproj" />
     <ProjectReference Include="..\THNETII.WinApi.Headers.WinIOCtl\THNETII.WinApi.Headers.WinIOCtl.csproj" />
   </ItemGroup>
 
