SCARD_PCI_* constants, winscard.h line 78

--- a/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
+++ b/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.UtilApiset\THNETII.WinApi.Headers.UtilApiset.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.WinBase\THNETII.WinApi.Headers.WinBase.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.WinNT\THNETII.WinApi.Headers.WinNT.csproj" />
+    <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.WinSCard\THNETII.WinApi.Headers.WinSCard.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.WinUser\THNETII.WinApi.Headers.WinUser.csproj" />
   </ItemGroup>
 
