SCardListReaderGroups functions, winscard.h line 163

--- a/src/THNETII.WinApi.Headers.WinSCard/THNETII.WinApi.Headers.WinSCard.csproj
+++ b/src/THNETII.WinApi.Headers.WinSCard/THNETII.WinApi.Headers.WinSCard.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src-shared\THNETII.WinApi.WindowsDataTypes\THNETII.WinApi.WindowsDataTypes.csproj" />
     <ProjectReference Include="..\THNETII.WinApi.Constants.SCardErr\THNETII.WinApi.Constants.SCardErr.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
