--- a/src-shared/THNETII.WinApi.WindowsDataTypes/THNETII.WinApi.WindowsDataTypes.csproj
+++ b/src-shared/THNETII.WinApi.WindowsDataTypes/THNETII.WinApi.WindowsDataTypes.csproj
@@ -2,7 +2,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <LangVersion>7.2</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>8</LangVersion>
     <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <RootNamespace>THNETII.WinApi.Native</RootNamespace>
