--- a/src/THNETII.WinApi.Headers.WinSCard/THNETII.WinApi.Headers.WinSCard.csproj
+++ b/src/THNETII.WinApi.Headers.WinSCard/THNETII.WinApi.Headers.WinSCard.csproj
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>8</LangVersion>
     <TargetFrameworks>netstandard1.3;netstandard2.0;netcoreapp3.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
