--- a/src/THNETII.WinApi.Headers.WinSmcrd/THNETII.WinApi.Headers.WinSmcrd.csproj
+++ b/src/THNETII.WinApi.Headers.WinSmcrd/THNETII.WinApi.Headers.WinSmcrd.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <LangVersion>8</LangVersion>
     <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
