--- a/src/THNETII.WinApi.Headers.WinSCard/THNETII.WinApi.Headers.WinSCard.csproj
+++ b/src/THNETII.WinApi.Headers.WinSCard/THNETII.WinApi.Headers.WinSCard.csproj
@@ -6,7 +6,7 @@
     <LangVersion>8</LangVersion>
     <TargetFrameworks>netstandard1.3;netstandard2.0;netcoreapp3.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>CS1591</NoWarn>
+    <NoWarn>CS1591;CS0419;$(NoWarn)</NoWarn>
     <RootNamespace>THNETII.WinApi.Native.WinSCard</RootNamespace>
   </PropertyGroup>
 
