--- a/src/THNETII.WinApi.Headers.DevPropDef/THNETII.WinApi.Headers.DevPropDef.csproj
+++ b/src/THNETII.WinApi.Headers.DevPropDef/THNETII.WinApi.Headers.DevPropDef.csproj
@@ -2,7 +2,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
+    <LangVersion>8</LangVersion>
+    <TargetFrameworks>netstandard1.3;netstandard2.0;netcoreapp2.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <RootNamespace>THNETII.WinApi.Native.DevPropDef</RootNamespace>
   </PropertyGroup>
