--- a/src/THNETII.WinApi.Headers.DevPropDef/THNETII.WinApi.Headers.DevPropDef.csproj
+++ b/src/THNETII.WinApi.Headers.DevPropDef/THNETII.WinApi.Headers.DevPropDef.csproj
@@ -8,4 +8,9 @@
     <RootNamespace>THNETII.WinApi.Native.DevPropDef</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Memory\THNETII.InteropServices.Memory.csproj" />
+    <ProjectReference Include="..\..\src-shared\THNETII.WinApi.WindowsDataTypes\THNETII.WinApi.WindowsDataTypes.csproj" />
+  </ItemGroup>
+
 </Project>
