--- a/src/THNETII.WinApi.Headers.DevPropDef/THNETII.WinApi.Headers.DevPropDef.csproj
+++ b/src/THNETII.WinApi.Headers.DevPropDef/THNETII.WinApi.Headers.DevPropDef.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>8</LangVersion>
     <TargetFrameworks>netstandard1.3;netstandard2.0;netcoreapp2.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
