include devpropdef.h, apdevpkey.h line 27

--- a/src/THNETII.WinApi.Headers.ApDevPKey/THNETII.WinApi.Headers.ApDevPKey.csproj
+++ b/src/THNETII.WinApi.Headers.ApDevPKey/THNETII.WinApi.Headers.ApDevPKey.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>THNETII.WinApi.Native.ApDevPKey</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Headers.DevPropDef\THNETII.WinApi.Headers.DevPropDef.csproj" />
+  </ItemGroup>
+
 </Project>
