IOCTL_KS_* constants, ks.h line 82

--- a/src/THNETII.WinApi.Headers.Ks/THNETII.WinApi.Headers.Ks.csproj
+++ b/src/THNETII.WinApi.Headers.Ks/THNETII.WinApi.Headers.Ks.csproj
@@ -9,4 +9,8 @@
     <RootNamespace>THNETII.WinApi.Native.Ks</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Headers.WinIOCtl\THNETII.WinApi.Headers.WinIOCtl.csproj" />
+  </ItemGroup>
+
 </Project>
