AccFree function, accctrl.h line 38

--- a/src/THNETII.WinApi.Headers.AccCtrl/THNETII.WinApi.Headers.AccCtrl.csproj
+++ b/src/THNETII.WinApi.Headers.AccCtrl/THNETII.WinApi.Headers.AccCtrl.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>THNETII.WinApi.Native.AccCtrl</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Headers.WinBase\THNETII.WinApi.Headers.WinBase.csproj" />
+  </ItemGroup>
+
 </Project>
