--- a/src/THNETII.WinApi.Headers.AccCtrl/THNETII.WinApi.Headers.AccCtrl.csproj
+++ b/src/THNETII.WinApi.Headers.AccCtrl/THNETII.WinApi.Headers.AccCtrl.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <LangVersion>8</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
