IsValidCodePage function, winnls.h line 1516

--- a/src-native/THNETII.WinApi.Headers.WinNls/THNETII.WinApi.Headers.WinNls.csproj
+++ b/src-native/THNETII.WinApi.Headers.WinNls/THNETII.WinApi.Headers.WinNls.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src-shared\THNETII.WinApi.NativeLibraryNames\THNETII.WinApi.NativeLibraryNames.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
     <ProjectReference Include="..\..\src-shared\THNETII.WinApi.Helpers\THNETII.WinApi.Helpers.csproj" />
     <ProjectReference Include="..\..\src-shared\THNETII.WinApi.WindowsDataTypes\THNETII.WinApi.WindowsDataTypes.csproj" />
   </ItemGroup>
