GetCPInfo function, winnls.h line 1546

--- a/src-native/THNETII.WinApi.Headers.WinNls/THNETII.WinApi.Headers.WinNls.csproj
+++ b/src-native/THNETII.WinApi.Headers.WinNls/THNETII.WinApi.Headers.WinNls.csproj
@@ -14,6 +14,9 @@
     <ProjectReference Include="..\THNETII.WinApi.Constants.WinNls\THNETII.WinApi.Constants.WinNls.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
+    <ProjectReference Include="..\THNETII.WinApi.Constants.WinError\THNETII.WinApi.Constants.WinError.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
