--- a/src-native/THNETII.WinApi.Headers.AccCtrl/THNETII.WinApi.Headers.AccCtrl.csproj
+++ b/src-native/THNETII.WinApi.Headers.AccCtrl/THNETII.WinApi.Headers.AccCtrl.csproj
@@ -7,6 +7,7 @@
     <TargetFrameworks>netstandard1.3;netstandard1.6;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <RootNamespace>THNETII.WinApi.Native.AccCtrl</RootNamespace>
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
