Fix project path error in build pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,12 +27,12 @@ jobs:
     common:
       allProjects: |
         [Ss]rc/*/*.csproj
-        [Ss]rc-[Nn]native/*/*.csproj
+        [Ss]rc-[Nn]ative/*/*.csproj
         [Ss]rc-[Ss]hared/*/*.csproj
         [Tt]est/*/*.csproj
       srcProjects: |
         [Ss]rc/*/*.csproj
-        [Ss]rc-[Nn]native/*/*.csproj
+        [Ss]rc-[Nn]ative/*/*.csproj
         [Ss]rc-[Ss]hared/*/*.csproj
       testProjects: |
         [Tt]est/*/*.csproj
