--- a/src-native/THNETII.WinApi.Headers.ErrHandlingApi/THNETII.WinApi.Headers.ErrHandlingApi.csproj
+++ b/src-native/THNETII.WinApi.Headers.ErrHandlingApi/THNETII.WinApi.Headers.ErrHandlingApi.csproj
@@ -5,7 +5,7 @@
     <LangVersion>7.2</LangVersion>
     <TargetFrameworks>netstandard1.3;netstandard1.6;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>CS1591</NoWarn>
+    <NoWarn>$(NoWarn);CS0419;CS1591</NoWarn>
     <RootNamespace>THNETII.WinApi.Native.ErrHandlingApi</RootNamespace>
   </PropertyGroup>
 
