Update repository default files

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -4,7 +4,7 @@ update_configs:
   directory: /
   update_schedule: daily
   default_assignees:
-  - couven92
+  - fredrikhr
   automerged_updates:
   - match:
       update_type: "all"
@@ -12,7 +12,7 @@ update_configs:
   directory: /
   update_schedule: live
   default_assignees:
-  - couven92
+  - fredrikhr
   automerged_updates:
   - match:
       dependency_type:  "production"
