Update repository files

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <!-- 
-    Usage of the TargetFrameworkIdentifier and _TargetFrameworkVersionWithoutV 
+    Usage of TargetFrameworkIdentifier and _TargetFrameworkVersionWithoutV 
     require the .NET Core SDK props files to have been included.
     Therefore, the following Nullable Reference Type settings are moved to
     the .targets file instead.
